<resources>
    <string name="app_name">PAPEI ADTS</string>
    <string name="app_name_sec">Adaptive Teaching Systems</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_user_email">Not valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_success">User has been registered successfully!</string>
    <string name="register_fail">Failed to register, please try again</string>
    <string name="require_email">Email is required</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="require_password">Password is required</string>
    <string name="min_password">Min password length is 6 characters</string>
    <string name="check_email">Check your email to verify your account and try again</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_password_email">Check your email to reset your password</string>
    <string name="enter_valid_email_try_again">Please enter a valid email and try again</string>
    <string name="new_test_b2">Start new test B2 Level</string>
    <string name="new_test_b1">Start new test B1 Level</string>
    <string name="results">Show Results</string>
    <string name="continue_test">Continue test</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="question_1">I\'m very happy _____ in India. I really miss being there.</string>
    <string name="question_2">They didn\'t reach an agreement ______ their differences.</string>
    <string name="question_3">I wish I _____ those words. But now it\'s too late.</string>
    <string name="question_4">The woman, who has been missing for 10 days, is believed _____.</string>
    <string name="question_5">She was working on her computer with her baby next to _____.</string>
    <string name="question_6">_____ to offend anyone, she said both cakes were equally good.</string>
    <string name="question_7">_____ in trying to solve this problem. It is clearly unsolvable. </string>
    <string name="question_8">Last year, when I last met her, she told me she _____ a letter every day for the last two months.</string>
    <string name="question_9">He _____ robbed as he was walking out of the bank.</string>
    <string name="question_10">_____ forced to do anything. He acted of his own free will.</string>
    <string name="question_11">It _____ the best idea to pay for those tickets by credit card. It was too risky.</string>
    <string name="question_12">They _____ in the basement for three months.</string>
    <string name="question_13">We\'ll never know what might have happened _____ the email earlier.</string>
    <string name="question_14">If success _____, we need to prepare ourselves for every possible scenario</string>
    <string name="question_15">______ gifts to the judges.</string>
    <string name="question_2_1">I\'m wondering which country _____ this year.</string>
    <string name="question_2_2">Lisa likes opera, which is lucky for me, because _____ too.</string>
    <string name="question_2_3">_____ Peter? I _____ for him all morning..</string>
    <string name="question_2_4">Some actions that are habits for _____, may look weird to people from other nationalities.</string>
    <string name="question_2_5">I don\'t understand why you always have to say _____ stupid things.</string>
    <string name="question_2_6">If I continue reading 50 pages every day. By the end of the month I _____ 8,000 pages.</string>
    <string name="question_2_7">She wouldn\'t be helping you if she _____ your sister.</string>
    <string name="question_2_8">I wish I _____ come to the zoo with you next weekend, but I’m going to be busy.</string>
    <string name="question_2_9">My parents were very _____ I expected they would buy me a better present.</string>
    <string name="question_2_10">She regretted _____.</string>
    <string name="question_2_11">The weather was very hot the whole time. We _____ a month later when it\'s cooler..</string>
    <string name="question_2_12">I’d rather _____ for me at the station.</string>
    <string name="question_2_13">The robbers _____ have escaped.</string>
    <string name="question_2_14">I must go to the doctor and _____ before I go on holiday.</string>
    <string name="question_2_15">_____ everything she said, I won’t forgive her.</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="please_check_data">Please check your data</string>



    <!-- answers b1-->

    <string name="ans_2_1_option_a_">they have travelled _____.</string>
    <string name="ans_2_1_option_b_">have they travelled to _____.</string>
    <string name="ans_2_1_option_c_">they have travelled to.</string>
    <string name="ans_2_1_option_d">have they travelled.</string>
    <string name="ans_2_2_option_a_">I do.</string>
    <string name="ans_2_2_option_b_">I like.</string>
    <string name="ans_2_2_option_c_">do I.</string>
    <string name="ans_2_2_option_d">I am.</string>
    <string name="ans_2_3_option_a_">Have you been seeing / have looked.</string>
    <string name="ans_2_3_option_b_">Have you seen / \'ve been looking </string>
    <string name="ans_2_3_option_c_">Have you been seen / have been looking.</string>
    <string name="ans_2_3_option_d">Have you seing / \'ve looked.</string>
    <string name="ans_2_4_option_a_">the Japanese </string>
    <string name="ans_2_4_option_b_">the Japanese people</string>
    <string name="ans_2_4_option_c_">the Japaneses.</string>
    <string name="ans_2_4_option_d">Japaneses.</string>
    <string name="ans_2_5_option_a_">So </string>
    <string name="ans_2_5_option_b_">such </string>
    <string name="ans_2_5_option_c_">such a.</string>
    <string name="ans_2_5_option_d">So much.</string>
    <string name="ans_2_6_option_a_">will read </string>
    <string name="ans_2_6_option_b_">am going to read </string>
    <string name="ans_2_6_option_c_">will be reading.</string>
    <string name="ans_2_6_option_d">will have read.</string>
    <string name="ans_2_7_option_a_">wouldn\'t be</string>
    <string name="ans_2_7_option_b_">wouldn\'t have been </string>
    <string name="ans_2_7_option_c_">isn\'t.</string>
    <string name="ans_2_7_option_d">weren\'t.</string>
    <string name="ans_2_8_option_a_">could.</string>
    <string name="ans_2_8_option_b_">would.</string>
    <string name="ans_2_8_option_c_">had.</string>
    <string name="ans_2_8_option_d">will.</string>
    <string name="ans_2_9_option_a_">disappointing.</string>
    <string name="ans_2_9_option_b_">disappointed</string>
    <string name="ans_2_9_option_c_">disappoint.</string>
    <string name="ans_2_9_option_d">disappointingly.</string>
    <string name="ans_2_10_option_a_">get married.</string>
    <string name="ans_2_10_option_b_">to get married.</string>
    <string name="ans_2_10_option_c_">having got married.</string>
    <string name="ans_2_10_option_d">to have got married.</string>
    <string name="ans_2_11_option_a_">shouldn\'t have gone </string>
    <string name="ans_2_11_option_b_">should have gone </string>
    <string name="ans_2_11_option_c_">must have gone.</string>
    <string name="ans_2_11_option_d">can\’t have gone.</string>
    <string name="ans_2_12_option_a_">you waited </string>
    <string name="ans_2_12_option_b_">you wait </string>
    <string name="ans_2_12_option_c_">you to wait.</string>
    <string name="ans_2_12_option_d">you waiting.</string>
    <string name="ans_2_13_option_a_">are thought that they </string>
    <string name="ans_2_13_option_b_">it’s thought that they </string>
    <string name="ans_2_13_option_c_">are thought to</string>
    <string name="ans_2_13_option_d">are thought that</string>
    <string name="ans_2_14_option_a_">are thought that</string>
    <string name="ans_2_14_option_b_">have my blood pressure tested</string>
    <string name="ans_2_14_option_c_">have tested my blood pressure</string>
    <string name="ans_2_14_option_d">get to test my blood pressure</string>
    <string name="ans_2_15_option_a_">Despite of </string>
    <string name="ans_2_15_option_b_">Although </string>
    <string name="ans_2_15_option_c_">In spite of</string>
    <string name="ans_2_15_option_d">However</string>

    <!-- Incident literals-->
    <string name="view_all_user_incidents">My Incidents</string>
    <string name="view_all_incidents">View All Incidents</string>
    <string name="earthquake">Earthquake</string>
    <string name="fire">Fire</string>
    <string name="flood">Flood</string>
    <string name="snow_storm">Snow Storm</string>
    <string name="heavy_rain">Heavy Rain</string>
    <string name="car_accident">Car Accident</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="viewmap">View On Map</string>
    <string name="reported_incident_success">Incident has been reported successfully!</string>
    <string name="reported_incident__fail">Failed to report, please try again</string>
    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="firebase_path">location</string>

</resources>