<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.adts_papei_proj.data.viewmodels.MainViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:backgroundTint="@color/bloodred"
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/usernameText"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:onClick="onClick">
    </Button>

    <TextView
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/bloodred"
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:lines="2"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutBtn">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <Button
            android:background="@drawable/roundedbtn"
            android:backgroundTint="@color/bloodred"
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_test_b1"
            android:textAllCaps="false"
            android:onClick="@{()->vm.startNewTestB1Level()}"
            android:layout_margin="8dp">
        </Button>

        <Button
            android:background="@drawable/roundedbtn"
            android:backgroundTint="@color/bloodred"
            android:id="@+id/viewUserIncidents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_test_b2"
            android:textAllCaps="false"
            android:onClick="@{()->vm.startNewTestB2Level()}"
            android:layout_margin="8dp">
        </Button>
        <Button
            android:background="@drawable/roundedbtn"
            android:backgroundTint="@color/bloodred"
            android:id="@+id/showResultsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results"
            android:textAllCaps="false"
            android:onClick="@{()->vm.showResults()}"
            android:layout_margin="8dp">
        </Button>

    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>